# ProjetoSistemasEmbarcados2021

./: README.md
Código_fonte/Projeto/: camera.cpp
Código_fonte/face/: face.cpp
Código_fonte/matrix/: CMakeLists.txt  CriaImagem.cpp  dlib
